Documentation and some refactorings